# BinTrees

./: .gitignore  CMakeLists.txt  README.md
include/: bintree.h
src/: bintree.cpp
